<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="vertical"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:layout_width="match_parent"
            android:textAlignment="center"
            android:textSize="28sp"
            android:text="@string/promo_code_title"
            android:textColor="@color/black"
            android:layout_height="wrap_content" />

        <TextView
            android:textColor="@color/colorGray"
            android:textAlignment="center"
            android:layout_marginHorizontal="18dp"
            android:layout_marginVertical="10dp"
            android:text="@string/promo_code_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <EditText
            android:textColorHint="@color/colorGray"
            android:id="@+id/promotionCode"
            android:drawableStart="@drawable/ic_promotion_24"
            android:drawablePadding="10dp"
            android:background="@drawable/edittext"
            android:layout_marginVertical="10dp"
            android:layout_marginHorizontal="20dp"
            android:padding="15dp"
            android:textSize="13sp"
            android:hint="@string/promotional_code"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <Button
            android:textColor="@color/white"
            android:id="@+id/confirmPromotion"
            android:backgroundTint="@color/black"
            android:layout_marginHorizontal="20dp"
            android:layout_width="match_parent"
            android:text="@string/confirm"
            android:layout_height="wrap_content" />

    </LinearLayout>

</LinearLayout>