<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:padding="10dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    android:minWidth="350dp"
    android:background="@drawable/card_bg"
    android:orientation="vertical">


    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:text="@string/youre_logout"
        android:textSize="25dp"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:layout_height="wrap_content" />

    <TextView
        android:textColor="@color/colorGray"
        android:id="@+id/description"
        android:layout_marginTop="10dp"
        android:textAlignment="center"
        android:text="@string/session_expired_desc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:textColor="@color/white"
        android:id="@+id/ok"
        android:layout_marginTop="15dp"
        android:layout_width="match_parent"
        android:text="@string/ok"
        android:textSize="12sp"
        android:backgroundTint="@color/black"
        android:layout_height="wrap_content" />


</LinearLayout>