<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:padding="10dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    android:minWidth="350dp"
    android:background="@drawable/card_bg"
    android:orientation="vertical">


    <TextView
        android:layout_width="match_parent"
        android:text="@string/update_app"
        android:textSize="25dp"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:layout_height="wrap_content" />

    <TextView
        android:textColor="@color/colorGray"
        android:layout_marginTop="10dp"
        android:textAlignment="center"
        android:text="@string/update_app_desc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:visibility="gone"
        android:orientation="vertical"
        android:id="@+id/downloadProgressArea"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ProgressBar
            android:id="@+id/downloadingProgress"
            android:max="100"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/x_downloaded"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:textColor="@color/colorGray"
            android:text="@string/downloaded_s"
            />
    </LinearLayout>

    <Button
        android:textColor="@color/white"
        android:id="@+id/upgrade"
        android:layout_marginTop="15dp"
        android:layout_width="match_parent"
        android:text="@string/update"
        android:textSize="12sp"
        android:backgroundTint="@color/black"
        android:layout_height="wrap_content" />


</LinearLayout>