<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_gravity="center"
    android:gravity="center"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:src="@drawable/app_icon"
        android:layout_width="160dp"
        android:layout_height="160dp"
        />

    <TextView
        android:textColor="@color/colorGray"
        android:fontFamily="cursive"
        android:layout_marginTop="5dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="ByteFollow"
        android:textSize="25sp"
        />

    <Button
        android:textColor="@color/white"
        android:id="@+id/goLogin"
        android:layout_marginHorizontal="15dp"
        android:layout_marginTop="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/black"
        android:text="@string/login_with_tiktok"
        />


    <TextView
        android:textColor="@color/colorGray"
        android:textSize="12sp"
        android:layout_marginTop="5dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_description"
        />

    <TextView
        android:textColor="@color/colorGray"
        android:textSize="12sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/terms_of_use"
         />


</LinearLayout>