<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:padding="10dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    android:minWidth="350dp"
    android:background="@drawable/card_bg"
    android:orientation="vertical">


    <ImageView
        android:id="@+id/closeDialog"
        android:layout_gravity="right"
        android:layout_width="25dp"
        android:src="@drawable/ic_baseline_close_24"
        android:layout_height="25dp"
        tools:ignore="RtlHardcoded" />

    <ImageView
        android:id="@+id/selectedPhoto"
        android:layout_gravity="center"
        android:layout_width="125dp"
        android:layout_marginBottom="10dp"
        android:background="#dbdbdb"
        android:scaleType="centerCrop"
        android:layout_height="125dp" />

    <TextView
        android:textColor="@color/colorGray"
        android:layout_marginLeft="15dp"
        android:id="@+id/maximum"
        android:textSize="12sp"
        android:text="@string/max_0"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />


    <SeekBar
        android:id="@+id/seekBar"
        android:max="100"
        android:progressTint="@color/pink"
        android:thumb="@drawable/seekbar_thumb"
        android:layout_marginHorizontal="8dp"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />


    <Button
        android:textColor="@color/white"
        android:id="@+id/addOrder"
        android:layout_marginVertical="10dp"
        android:textSize="12sp"
        android:text="@string/add_new_order"
        android:layout_marginHorizontal="15dp"
        android:backgroundTint="@color/black"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />


    <LinearLayout
        android:gravity="center"
        android:layout_marginBottom="15dp"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <TextView
            android:textColor="@color/colorGray"
            android:id="@+id/seekBarCountViewer"
            android:layout_gravity="center"
            android:textSize="28sp"
            android:text="@string/_0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:textColor="@color/colorGray"
            android:id="@+id/actionType"
            android:textSize="12sp"
            android:text="@string/likes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:layout_margin="10dp"
        android:layout_width="wrap_content"
        android:layout_gravity="center"
        android:layout_height="wrap_content">
        <ImageView
            android:layout_gravity="center"
            android:src="@drawable/ic_coin"
            android:layout_width="25dp"
            android:layout_height="25dp" />
        <TextView
            android:id="@+id/amountCoin"
            android:textSize="12sp"
            android:text="@string/x_coin"
            android:layout_gravity="center"
            android:gravity="center"
            android:paddingHorizontal="8dp"
            android:paddingVertical="2dp"
            android:textColor="@color/black"
            android:layout_width="match_parent"
            android:layout_marginRight="8dp"
            android:layout_height="match_parent" />
    </LinearLayout>


</LinearLayout>