<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <de.hdodenhof.circleimageview.CircleImageView
            android:layout_marginTop="10dp"
            android:layout_gravity="center"
            android:background="@drawable/avatar_bg"
            android:id="@+id/userAvatar"
            android:layout_width="70dp"
            android:layout_height="70dp" />

        <TextView
            android:id="@+id/searchUsernameField"
            android:layout_marginTop="8dp"
            android:text="@string/three_dot"
            android:textSize="16sp"
            android:textColor="@color/black"
            android:textAlignment="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:layout_marginTop="15dp"
            android:gravity="center"
            android:orientation="horizontal"
            android:layout_gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:padding="15dp"
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >
                <TextView
                    android:id="@+id/followingCount"
                    android:textSize="18sp"
                    android:textColor="@color/black"
                    android:textAlignment="center"
                    android:text="@string/_0"
                    android:fontFamily="sans-serif-black"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
                <TextView
                    android:textColor="@color/colorGray"
                    android:textAlignment="center"
                    android:text="@string/following"
                    android:textSize="11sp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </LinearLayout>
            <LinearLayout
                android:padding="15dp"
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >
                <TextView
                    android:id="@+id/followersCount"
                    android:textSize="18sp"
                    android:textColor="@color/black"
                    android:textAlignment="center"
                    android:text="@string/_0"
                    android:fontFamily="sans-serif-black"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
                <TextView
                    android:textColor="@color/colorGray"
                    android:textAlignment="center"
                    android:text="@string/followers"
                    android:textSize="11sp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </LinearLayout>
            <LinearLayout
                android:padding="15dp"
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >
                <TextView
                    android:id="@+id/likesCount"
                    android:textSize="18sp"
                    android:textColor="@color/black"
                    android:textAlignment="center"
                    android:text="@string/_0"
                    android:fontFamily="sans-serif-black"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
                <TextView
                    android:textColor="@color/colorGray"
                    android:textAlignment="center"
                    android:text="@string/likes"
                    android:textSize="11sp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </LinearLayout>
        </LinearLayout>

        <Button
            android:id="@+id/sendFollowers"
            android:layout_marginHorizontal="25dp"
            android:layout_width="match_parent"
            android:backgroundTint="@color/black"
            android:text="@string/send_followers"
            android:textColor="@color/white"
            android:textSize="12sp"
            android:layout_height="wrap_content" />

    </LinearLayout>
</LinearLayout>