<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/swipeRefreshReference"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:orientation="vertical"
                android:layout_gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:layout_gravity="center"
                    android:src="@drawable/ic_reference_extra"
                    android:layout_width="100dp"
                    android:layout_height="100dp" />


                <TextView
                    android:textColor="@color/colorGray"
                    android:textAlignment="center"
                    android:layout_marginHorizontal="20dp"
                    android:layout_marginVertical="10dp"
                    android:text="@string/reference_description"
                    android:layout_width="match_parent"
                    android:textSize="18sp"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/refCode"
                    android:layout_width="match_parent"
                    android:textAlignment="center"
                    android:textSize="50sp"
                    android:text="@string/three_dot"
                    android:textColor="@color/black"
                    android:layout_height="wrap_content" />

                <Button
                    android:id="@+id/copyRefCode"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="10dp"
                    android:textSize="12sp"
                    android:backgroundTint="@color/pink"
                    android:text="@string/copy_ref_code" />

                <Button
                    android:textColor="@color/white"
                    android:visibility="gone"
                    android:id="@+id/enterRefCode"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="10dp"
                    android:textSize="12sp"
                    android:backgroundTint="@color/black"
                    android:text="@string/enter_ref_code" />

                <TextView
                    android:textColor="@color/colorGray"
                    android:visibility="gone"
                    android:id="@+id/total_ref"
                    android:textAlignment="center"
                    android:text="@string/three_dot"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />


            </LinearLayout>

        </ScrollView>
    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

</LinearLayout>